--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -34,10 +34,11 @@
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
       labore et
     </p>
-    <button class="button button--light hero__about-btn">
+    <button class="button button--light hero__about-btn button-animation">
       <svg class="hero__icon" width="8" height="8">
         <use href="./images/icons.svg#icon-arrow"></use>
       </svg>
     </button>
+    <p class="sub-read">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ipsa quo architecto quis ex ipsam rem obcaecati deserunt magni beatae, at nisi porro velit repellat nostrum molestias neque nemo magnam.</p>
   </div>
 </section>
