--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,12 @@
 <!--FOOTER-->
-<section class="footer">
+<footer class="footer">
     <div class="container footer__text">
-        <p class="footer__text-first">homemade ice cream made</p>
-        <p class="footer__text-second">with passion</p>
-            <ul class="list footer__socials">
+        <div>
+            <p class="footer__text-first">homemade ice cream made</p>
+            <p class="footer__text-second">with passion</p>
+        </div>
+        <div >
+        <ul class="list footer__socials">
             <li class="footer__socials-item">
                 <a href="https://github.com" class="footer__socials-link" target="_blank" rel="noopener noreferrer">
                     <svg class="footer__socials-svg" width="20" height="20">
@@ -26,9 +29,10 @@
                 </a>
             </li>
         </ul>
-        <p class="footer__contacts">Feel free to contact <a href="tel:+610383766284" class="link"><span class="footer__text-number">+61 (0) 383 766 284</span></a></p>
-        <div class="footer__border">
-        <p class="footer__text-copyright">&copy; 2019 - IceCream. All Rights Reserved.</p>
+            <p class="footer__contacts">Feel free to contact <a href="tel:+610383766284" class="link"><span class="footer__text-number">+61 (0) 383 766 284</span></a></p>
         </div>
     </div>
-</section>
+    <div class="footer__border">
+        <p class="footer__text-copyright">&copy; 2019 - IceCream. All Rights Reserved.</p>
+    </div>
+</footer>
