--- a/src/sass/layout.scss/_footer.scss
+++ b/src/sass/layout.scss/_footer.scss
@@ -6,8 +6,26 @@
 }
 .footer__text {
   width: 234px;
-  text-align: left;
+
   padding-bottom: 43px;
+
+  @include for-phone {
+    width: 100%;
+  }
+
+  @include for-tablet {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 18px;
+  }
+
+  @include for-desktop {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 10px;
+  }
 }
 .footer__text-first {
   font-family: $title-font;
@@ -20,6 +38,21 @@
   padding-bottom: 17px;
   margin-top: 0;
   margin-bottom: 0;
+
+  @include for-phone {
+    text-align: left;
+  }
+
+  @include for-tablet {
+    font-size: 26px;
+    line-height: 1.15;
+  }
+
+  @include for-desktop {
+    width: 100%;
+    font-size: 30px;
+    line-height: 1.13;
+  }
 }
 .footer__text-second {
   font-family: $title-font;
@@ -31,19 +64,27 @@
   text-transform: uppercase;
   color: $accent-dark;
   padding-bottom: 43px;
-}
 
+  @include for-tablet {
+    font-size: 48px;
+    padding-bottom: 91px;
+  }
+
+  @include for-desktop {
+    width: 100%;
+    font-size: 58px;
+    line-height: 1.13;
+  }
+}
 .footer__socials {
   display: inline-flex;
   width: 152px;
   padding-bottom: 46px;
   margin-left: 127px;
 }
-
 .footer__socials-item:not(:last-child) {
   margin-right: 28px;
 }
-
 .footer__socials-link {
   display: flex;
   align-items: center;
@@ -54,29 +95,23 @@
   background-color: #fea5bb;
   transition: background-color $animation;
 }
-
 .footer__socials-link:hover,
 .footer__socials-link:focus {
   background-color: $accent-dark;
   transition: background-color $animation;
 }
-
 .footer__socials-link:hover .footer__socials-svg {
   transition: fill $animation;
 }
-
 .footer__socials-svg {
   fill: $white-text-color;
   transition: fill $animation;
 }
-
 .footer__contacts {
   width: 280px;
-
   font-weight: 700;
   font-size: 12px;
   line-height: 1.83;
-
   text-align: right;
   padding-bottom: 43px;
 }
@@ -84,10 +119,16 @@
   color: $accent-dark;
 }
 .footer__border {
-  width: 320px;
-  margin-left: -20px;
-  padding-bottom: 0;
   border-top: 1px solid #e1e1e1;
+  padding-bottom: 25px;
+
+  @include for-tablet {
+    padding-bottom: 29px;
+  }
+
+  @include for-desktop {
+    padding-bottom: 10px;
+  }
 }
 .footer__text-copyright {
   font-family: $main-font;
@@ -100,4 +141,14 @@
   text-align: center;
   color: $secondary-text-color;
   padding-top: 20px;
+
+  @include for-tablet {
+    width: 768px;
+    padding-top: 29px;
+  }
+
+  @include for-desktop {
+    width: 1200px;
+    padding-top: 10px;
+  }
 }
