--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,44 +1,50 @@
 <section class="hero">
-  <div class="hero__main-info">
-    <h1 class="title hero__title">
-      <span class="hero__title--white">ice cream made with</span> passion
-    </h1>
-    <ul class="list hero__links">
-      <li class="hero__anchor">
-        <a href="#products" class="link">
-          <button class="button button--dark hero__button">Products</button>
-        </a>
-      </li>
+  <div class="hero__container">
+    <div class="hero__main-info">
+      <h1 class="title hero__title">
+        <span class="hero__title--white">ice cream made with</span> passion
+      </h1>
+      <ul class="list hero__links">
+        <li class="hero__anchor">
+          <a href="#products" class="link">
+            <button class="button button--dark hero__button">Products</button>
+          </a>
+        </li>
 
-      <li class="hero__anchor">
-        <a href="#about" class="link">
-          <button class="button button--light hero__button">How it’s made?</button>
-        </a>
-      </li>
+        <li class="hero__anchor">
+          <a href="#about" class="link">
+            <button class="button button--light hero__button">How it’s made?</button>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <ul class="list hero__branches">
+      <a href="#contacts" class="link">
+        <li class="hero__branches-item">
+          <p class="hero__branches-type"><span class="hero__number">16</span> cafes</p>
+        </li>
+        <li class="hero__branches-item">
+          <p class="hero__branches-type"><span class="hero__number">23</span> food trucks</p>
+        </li>
+      </a>
     </ul>
-  </div>
 
-  <ul class="list hero__branches">
-    <a href="#contacts" class="link">
-      <li class="hero__branches-item">
-        <p class="hero__branches-type"><span class="hero__number">16</span> cafes</p>
-      </li>
-      <li class="hero__branches-item">
-        <p class="hero__branches-type"><span class="hero__number">23</span> food trucks</p>
-      </li>
-    </a>
-  </ul>
-
-  <div class="hero__about">
-    <p class="hero__about-text">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-      labore et
-    </p>
-    <button class="button button--light hero__about-btn button-animation">
-      <svg class="hero__icon" width="8" height="8">
-        <use href="./images/icons.svg#icon-arrow"></use>
-      </svg>
-    </button>
-    <p class="sub-read">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ipsa quo architecto quis ex ipsam rem obcaecati deserunt magni beatae, at nisi porro velit repellat nostrum molestias neque nemo magnam.</p>
+    <div class="hero__about">
+      <p class="hero__about-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et
+      </p>
+      <button class="button button--light hero__about-btn button-animation">
+        <svg class="hero__icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-arrow"></use>
+        </svg>
+      </button>
+      <p class="sub-read">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ipsa quo architecto quis ex
+        ipsam rem obcaecati deserunt magni beatae, at nisi porro velit repellat nostrum molestias
+        neque nemo magnam.
+      </p>
+    </div>
   </div>
 </section>
