--- a/src/sass/layout.scss/_hero.scss
+++ b/src/sass/layout.scss/_hero.scss
@@ -1,4 +1,8 @@
 .hero {
+  background-color: $hero-bg;
+}
+
+.hero__container {
   position: relative;
   width: 100%;
   height: 500px;
@@ -230,7 +234,6 @@
 }
 
 .hero__about {
-  
   display: none;
 
   @include for-tablet {
@@ -247,7 +250,6 @@
 }
 
 .hero__about-text {
-
   margin-bottom: 7px;
   width: 130px;
   font-size: 8px;
@@ -282,29 +284,29 @@
     height: 26px;
   }
 }
-.sub-read{
-position: absolute;
-display: none;
-border-radius: 10px;
-font-weight: 400;
-line-height: 1.5;
-letter-spacing: 0.04em;
-background-color: $hero-bg;
-color: $white-text-color;
- text-align: center;
-@include for-tablet{
-  width: 180px;
-  font-size: 10px;
-  padding: 10px 5px;
-  top: -93%;
-  height: 164%;
-    }
-    @include for-desktop{
-      font-weight: 700;
-      font-size: 14px;
-      width: 300px;
-      padding-top: 20px;
-      padding-bottom: 20px;
-      height: 155%;
-    }
+.sub-read {
+  position: absolute;
+  display: none;
+  border-radius: 10px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background-color: $hero-bg;
+  color: $white-text-color;
+  text-align: center;
+  @include for-tablet {
+    width: 180px;
+    font-size: 10px;
+    padding: 10px 5px;
+    top: -93%;
+    height: 164%;
+  }
+  @include for-desktop {
+    font-weight: 700;
+    font-size: 14px;
+    width: 300px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    height: 155%;
+  }
 }
