--- a/src/sass/layout.scss/_footer.scss
+++ b/src/sass/layout.scss/_footer.scss
@@ -1,47 +1,54 @@
 .footer {
-  width: 100%;
   background-color: $light-bg;
-  padding-top: 0;
-  margin-top: 0;
-}
-.footer__text {
-  width: 234px;
-
-  padding-bottom: 43px;
-
-  @include for-phone {
-    width: 100%;
-  }
+  padding-top: 55px;
 
   @include for-tablet {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding-bottom: 18px;
+    padding-top: 75px;
   }
 
   @include for-desktop {
-    display: flex;
-    flex-wrap: wrap;
+    padding-top: 85px;
+  }
+}
+
+.footer__container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 43px;
+
+  @include for-tablet {
+    flex-direction: row;
     justify-content: space-between;
-    padding-bottom: 10px;
+    margin-bottom: 91px;
+  }
+
+  @include for-desktop {
+    margin-bottom: 97px;
+  }
+}
+
+.footer__text {
+  width: 234px;
+  font-family: $title-font;
+  text-transform: uppercase;
+  @include only-phone {
+    margin-bottom: 43px;
+  }
+
+  @include for-tablet {
+    width: 320px;
+  }
+
+  @include for-desktop {
+    width: 100%;
   }
 }
 .footer__text-first {
-  font-family: $title-font;
-  width: 232px;
-  font-weight: 400;
   font-size: 18px;
   line-height: 1.16;
-  text-transform: uppercase;
   color: $accent-light;
-  padding-bottom: 17px;
-  margin-top: 0;
-  margin-bottom: 0;
-
-  @include for-phone {
-    text-align: left;
-  }
+  margin-bottom: 17px;
 
   @include for-tablet {
     font-size: 26px;
@@ -49,42 +56,42 @@
   }
 
   @include for-desktop {
-    width: 100%;
     font-size: 30px;
     line-height: 1.13;
   }
 }
 .footer__text-second {
-  font-family: $title-font;
-  width: 200px;
-  font-weight: 400;
   font-size: 34px;
   line-height: 1.14;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
   color: $accent-dark;
-  padding-bottom: 43px;
 
   @include for-tablet {
     font-size: 48px;
-    padding-bottom: 91px;
   }
 
   @include for-desktop {
-    width: 100%;
     font-size: 58px;
     line-height: 1.13;
   }
 }
+
+.footer__contacts {
+  align-self: flex-end;
+
+  @include for-tablet {
+    align-self: flex-start;
+  }
+}
+
 .footer__socials {
   display: inline-flex;
-  width: 152px;
-  padding-bottom: 46px;
-  margin-left: 127px;
+  margin-bottom: 46px;
 }
+
 .footer__socials-item:not(:last-child) {
   margin-right: 28px;
 }
+
 .footer__socials-link {
   display: flex;
   align-items: center;
@@ -92,63 +99,47 @@
   width: 32px;
   height: 32px;
   border-radius: 50%;
-  background-color: #fea5bb;
+  background-color: $accent-light;
   transition: background-color $animation;
 }
+
 .footer__socials-link:hover,
 .footer__socials-link:focus {
   background-color: $accent-dark;
   transition: background-color $animation;
 }
+
 .footer__socials-link:hover .footer__socials-svg {
   transition: fill $animation;
 }
+
 .footer__socials-svg {
   fill: $white-text-color;
   transition: fill $animation;
 }
+
 .footer__contacts {
   width: 280px;
   font-weight: 700;
   font-size: 12px;
   line-height: 1.83;
   text-align: right;
-  padding-bottom: 43px;
 }
+
 .footer__text-number {
   color: $accent-dark;
 }
-.footer__border {
+
+.footer__copyright {
   border-top: 1px solid #e1e1e1;
+  padding-top: 20px;
   padding-bottom: 25px;
-
-  @include for-tablet {
-    padding-bottom: 29px;
-  }
-
-  @include for-desktop {
-    padding-bottom: 10px;
-  }
 }
-.footer__text-copyright {
-  font-family: $main-font;
-  width: 150px;
-  margin-left: auto;
-  margin-right: auto;
+
+.footer__copyright-text {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.5;
   text-align: center;
   color: $secondary-text-color;
-  padding-top: 20px;
-
-  @include for-tablet {
-    width: 768px;
-    padding-top: 29px;
-  }
-
-  @include for-desktop {
-    width: 1200px;
-    padding-top: 10px;
-  }
 }
