--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,47 +1,49 @@
-<div class="container single-item">
-  <div class="reviews">
-    <img
-      class="reviews__img"
-      srcset="./images/mobile/reviews/photo1.png 1x, ./images/mobile/reviews/photo1@2x.png 2x"
-      src="./images/mobile/reviews/photo1.png"
-      alt="Kseniia"
-    />
-    <div class="reviews__review">
-      <p class="reviews__text">
-        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
-        nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-      </p>
+<section class="section__reviews">
+  <div class="container reviews-slider">
+    <div class="reviews">
+      <img
+        class="reviews__img"
+        srcset="./images/mobile/reviews/photo1.png 1x, ./images/mobile/reviews/photo1@2x.png 2x"
+        src="./images/mobile/reviews/photo1.png"
+        alt="Kseniia"
+      />
+      <div class="reviews__review">
+        <p class="reviews__text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
+          nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+        </p>
+      </div>
+      <p class="reviews__person">Polina, Heidelberg</p>
     </div>
-    <p class="reviews__person">Kseniia, Los Angeles</p>
-  </div>
-  <div class="reviews">
-    <img
-      class="reviews__img"
-      srcset="./images/mobile/reviews/photo2.png 1x, ./images/mobile/reviews/photo2@2x.png 2x"
-      src="./images/mobile/reviews/photo2.png"
-      alt="Polina"
-    />
-    <div class="reviews__review">
-      <p class="reviews__text">
-        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
-        nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-      </p>
+    <div class="reviews">
+      <img
+        class="reviews__img"
+        srcset="./images/mobile/reviews/photo2.png 1x, ./images/mobile/reviews/photo2@2x.png 2x"
+        src="./images/mobile/reviews/photo2.png"
+        alt="Polina"
+      />
+      <div class="reviews__review">
+        <p class="reviews__text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
+          nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+        </p>
+      </div>
+      <p class="reviews__person">Kseniia, Kiev</p>
     </div>
-    <p class="reviews__person">Polina, Los Angeles</p>
-  </div>
-  <div class="reviews">
-    <img
-      class="reviews__img"
-      srcset="./images/mobile/reviews/photo3.png 1x, ./images/mobile/reviews/photo3@2x.png 2x"
-      src="./images/mobile/reviews/photo3.png"
-      alt="Tatiana"
-    />
-    <div class="reviews__review">
-      <p class="reviews__text">
-        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
-        nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-      </p>
+    <div class="reviews">
+      <img
+        class="reviews__img"
+        srcset="./images/mobile/reviews/photo3.png 1x, ./images/mobile/reviews/photo3@2x.png 2x"
+        src="./images/mobile/reviews/photo3.png"
+        alt="Tatiana"
+      />
+      <div class="reviews__review">
+        <p class="reviews__text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
+          nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+        </p>
+      </div>
+      <p class="reviews__person">Tatiana, Berlin</p>
     </div>
-    <p class="reviews__person">Tatiana, Los Angeles</p>
   </div>
-</div>
+</section>
