--- a/src/sass/layout.scss/_reviews.scss
+++ b/src/sass/layout.scss/_reviews.scss
@@ -1,9 +1,18 @@
+.section__reviews {
+  padding-top: 40px;
+  padding-bottom: 40px;
+
+  @include for-tablet {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
 .reviews {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
+
+  min-width: 0;
 
   font-weight: 500;
   line-height: 30px;
@@ -11,11 +20,6 @@
   text-align: center;
 
   color: $main-text-color;
-
-  @include for-tablet {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
 }
 .reviews__img {
   margin-bottom: 30px;
@@ -113,9 +117,9 @@
 
   &::after {
     content: '';
-    display: block;
     position: absolute;
-    left: 42%;
+    left: 50%;
+    transform: translateX(10%);
     bottom: -75px;
     width: 32px;
     height: 4px;
@@ -141,6 +145,41 @@
 
   @include for-desktop {
     font-size: 20px;
+    margin-bottom: 35px;
   }
 }
+.slick-track {
+  display: flex;
+}
+.slick-list {
+  overflow: hidden;
+}
+.reviews-slider .slick-dots {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  margin-left: 25px;
+  padding: 0;
+}
+.reviews-slider .slick-dots li {
+  list-style: none;
+  margin-right: 15px;
+}
+.reviews-slider .slick-dots button {
+  display: block;
+  font-size: 0;
+  width: 12px;
+  height: 12px;
+  padding: 0;
+  border-radius: 50%;
+  border: none;
 
+  background-color: #d9d9d9;
+}
+.reviews-slider .slick-dots li.slick-active button {
+  background-color: transparent;
+  background-image: url(../images/mobile/reviews/home.svg);
+  background-size: 12px 12px;
+  border-radius: 0;
+}
