--- a/src/sass/layout.scss/_advantages.scss
+++ b/src/sass/layout.scss/_advantages.scss
@@ -3,12 +3,21 @@
     background-color: $light-bg;
     padding-top: 20px;
     padding-bottom: 70px;
+
+    @include for-tablet {
+        padding-top: 33px;
+    }
+
+    @include for-desktop {
+        padding-top: 73px;
+    }
 }
 
 .advantages__item {
     &:not(:last-child) {
         padding-bottom: 38px;
-    }}
+    }
+}
 
 .advantages__text {
     font-weight: 700;
@@ -26,7 +35,7 @@
         width: 330px;
         font-size: 16px;
         line-height: 28px;
-      }
+    }
 }
 
 .advantages__number {
