--- a/src/sass/layout.scss/_contacts.scss
+++ b/src/sass/layout.scss/_contacts.scss
@@ -10,21 +10,23 @@
 }
 
 .contacts__list {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 54px;
+    display: flex;
+    flex-direction: column;
+    // margin-bottom: 54px;
 
   @include for-tablet {
     flex-direction: row;
-    margin-bottom: 81px;
+    // margin-bottom: 81px;
   }
 
   @include for-desktop {
-    margin-bottom: 86px;
+    // margin-bottom: 86px;
   }
 }
 
 .contacts__item {
+    position: relative;
+    top: -90px;
   @include only-phone {
     margin-left: auto;
     margin-right: auto;
@@ -38,6 +40,16 @@
   background-color: #fff;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
+
+  @include for-tablet{
+    position: relative;
+    top: -77px;
+  }
+
+  @include for-desktop{
+    position: relative;
+    top: -85px;
+  }
 }
 
 .contacts__type {
