--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,19 +30,19 @@
       <nav>
         <ul class="site-nav list">
           <li class="site-nav__item">
-            <a href="./index.html" class="link site-nav__current site-nav__link"> Home </a>
+            <a href="./index.html" class="link site-nav__link"> Home </a>
           </li>
           <li class="site-nav__item">
-            <a class="link site-nav__link" href="#">About us</a>
+            <a class="link site-nav__link" href="#about">About us</a>
           </li>
           <li class="site-nav__item">
-            <a class="link site-nav__link" href="#">How it’s made?</a>
+            <a class="link site-nav__link" href="#about">How it’s made?</a>
           </li>
           <li class="site-nav__item">
-            <a class="link site-nav__link" href="#">Our products</a>
+            <a class="link site-nav__link" href="#products">Our products</a>
           </li>
           <li class="site-nav__item">
-            <a class="link site-nav__link" href="#">Contact</a>
+            <a class="link site-nav__link" href="#contacts">Contact</a>
           </li>
         </ul>
       </nav>
@@ -61,7 +61,7 @@
 </header>
 <div class="backdrop is-hidden" data-buy-modal>
   <div class="buy-modal">
-    <button class="buy-modal__close" data-buy-modal-close>
+    <button class="modal__close" data-buy-modal-close>
       <svg width="20" height="20">
         <use href="./images/icons.svg#menu-close"></use>
       </svg>
