--- a/src/sass/layout.scss/_contacts.scss
+++ b/src/sass/layout.scss/_contacts.scss
@@ -207,7 +207,7 @@
 
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 165, 186, 0.8);
+  background-color: rgba(0, 0, 0, 0.2);
   overflow-y: scroll;
   padding: 40px 40px;
 
@@ -325,7 +325,7 @@
 
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 165, 186, 0.8);
+  background-color: rgba(0, 0, 0, 0.2);
   overflow-y: scroll;
   padding: 20px 20px;
 
@@ -343,7 +343,10 @@
 }
 
 .franchise-modal {
-  background-color: rgb(241 242 242);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: $light-bg;
   padding: 30px;
   position: relative;
   z-index: 2;
@@ -379,6 +382,7 @@
 }
 
 .franchise-modal__title {
+  color: $accent-dark;
   font-size: 17px;
   font-weight: 800;
   line-height: 1.13;
@@ -428,8 +432,13 @@
   }
 }
 
-.franchise-modal-checkbox {
-  margin-left: 40px;
+.franchise-modal__consent {
+  margin: 0 auto;
+  font-size: 12px;
+
+  @include for-tablet {
+    font-size: 16px;
+  }
 }
 
 .franchise-modal__button {
