--- a/src/sass/layout.scss/_contacts.scss
+++ b/src/sass/layout.scss/_contacts.scss
@@ -10,9 +10,9 @@
 }
 
 .contacts__list {
-    display: flex;
-    flex-direction: column;
-    // margin-bottom: 54px;
+  display: flex;
+  flex-direction: column;
+  // margin-bottom: 54px;
 
   @include for-tablet {
     flex-direction: row;
@@ -25,8 +25,8 @@
 }
 
 .contacts__item {
-    position: relative;
-    top: -90px;
+  position: relative;
+  top: -90px;
   @include only-phone {
     margin-left: auto;
     margin-right: auto;
@@ -41,23 +41,23 @@
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
 
-  @include for-tablet{
+  @include for-tablet {
     position: relative;
     top: -77px;
   }
 
-  @include for-desktop{
+  @include for-desktop {
     position: relative;
     top: -85px;
   }
 }
 
-.contacts__item:last-child{
-    margin-bottom: 0;
+.contacts__item:last-child {
+  margin-bottom: 0;
 
-    @include for-tablet{
-        margin-right: 0;
-    }
+  @include for-tablet {
+    margin-right: 0;
+  }
 }
 
 .contacts__type {
@@ -110,12 +110,12 @@
   line-height: 1.83;
   font-weight: 500;
 
-  @include for-tablet{
-    font-size: 14px; 
+  @include for-tablet {
+    font-size: 14px;
   }
 
-  @include for-desktop{
-    font-size: 16px;  
+  @include for-desktop {
+    font-size: 16px;
   }
 }
 
@@ -128,9 +128,7 @@
   font-size: 12px;
   line-height: 1.5;
 
-
   @include for-tablet {
-    
     font-size: 14px;
     line-height: 1.64;
   }
@@ -180,12 +178,10 @@
 
   @include for-tablet {
     font-size: 14px;
-    
   }
 
   @include for-desktop {
     font-size: 16px;
-   
   }
 }
 
@@ -272,10 +268,13 @@
   position: relative;
   z-index: 10;
 
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+
   @include for-desktop {
     width: 900px;
-    margin-left: auto;
-    margin-right: auto;
   }
 }
 
@@ -394,10 +393,13 @@
   position: relative;
   z-index: 2;
 
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+
   @include for-desktop {
     width: 900px;
-    margin-left: auto;
-    margin-right: auto;
   }
 }
 
@@ -423,13 +425,11 @@
 .franchise-button:focus .franchise-modal__icon {
   stroke: $accent-dark;
 }
-
 .franchise-modal__title {
   color: $accent-dark;
   font-size: 17px;
   font-weight: 800;
   line-height: 1.13;
-  text-transform: uppercase;
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -462,14 +462,6 @@
   line-height: 1.13;
   margin-bottom: 10px;
 
-  @include for-phone {
-    font-size: 14px;
-  }
-
-  @include for-tablet {
-    font-size: 16px;
-  }
-
   &:last-child {
     margin-bottom: 20px;
   }
@@ -477,11 +469,7 @@
 
 .franchise-modal__consent {
   margin: 0 auto;
-  font-size: 12px;
-
-  @include for-tablet {
-    font-size: 16px;
-  }
+  font-size: 16px;
 }
 
 .franchise-modal__button {
