--- a/src/sass/layout.scss/_header.scss
+++ b/src/sass/layout.scss/_header.scss
@@ -57,6 +57,8 @@
   background-color: transparent;
   cursor: pointer;
 
+  transition: right $animation;
+
   @include for-tablet {
     top: 30px;
     right: 225px;
@@ -65,7 +67,14 @@
   @include for-desktop {
     display: none;
   }
+
+  &.is-open {
+    @include for-tablet {
+      right: 20px;
+    }
+  }
 }
+
 .main-nav__svg {
   width: 21px;
   height: 14px;
@@ -155,7 +164,6 @@
 
   font-weight: 700;
   line-height: 1.31;
-
 
   @include for-tablet {
     width: 186px;
