--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -60,13 +60,13 @@
   </div>
 </header>
 <div class="backdrop is-hidden" data-buy-modal>
-  <div class="buy-modal">
+  <div class="modal">
     <button class="modal__close" data-buy-modal-close>
       <svg width="20" height="20">
         <use href="./images/icons.svg#menu-close"></use>
       </svg>
     </button>
-    <h2 class="buy-modal__title">Leave your contact details, we will call you back</h2>
+    <h2 class="modal__title">Leave your contact details, we will call you back</h2>
     <form class="form js-speaker-form">
       <div class="form__field">
         <label class="form__label" for="name">Name</label>
