--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -22,7 +22,7 @@
       maxime expedita in magnam explicabo? Accusantium illum rerum natus facilis repellat.
     </p>
     <button class="modal__close" data-about-modal-close>
-      <svg class="modal__icon-close" width="15" height="15">
+      <svg width="20" height="20">
         <use href="./images/icons.svg#menu-close"></use>
       </svg>
     </button>
