--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,6 +1,6 @@
 .backdrop {
   position: fixed;
-  z-index: 99;
+  z-index: 50;
   top: 0;
   left: 0;
   padding: 15px 15px;
@@ -11,15 +11,17 @@
   background-color: rgba(0, 0, 0, 0.2);
 
   opacity: 1;
+
+  transition: opacity $animation;
 }
 .is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
 
-  transition: visibility $animation, opacity $animation;
+  transition: opacity $animation;
 
- .buy-modal {
+  .modal {
     transform: translate(-50%, -50%) scale(0.9);
     opacity: 0;
   }
@@ -34,7 +36,7 @@
   max-width: 450px;
   width: 100%;
 
-  max-height: 100vh;
+  max-height: 90vh;
   padding: 40px;
   overflow-y: auto;
 
