модалка теперь плвно и заходит и выходит

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -12,19 +12,22 @@
 
   opacity: 1;
 
-  transition: opacity $animation;
+  transition: transform $animation, opacity $animation,
+  visibility $animation,
+  box-shadow $animation;
 }
-.is-hidden {
+.backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-
-  transition: opacity $animation;
-
-  .modal {
-    transform: translate(-50%, -50%) scale(0.9);
-    opacity: 0;
-  }
+  
+  transition: transform $animation,opacity $animation,
+  visibility $animation,
+  box-shadow $animation;
+  // .modal {
+  //   transform: translate(-50%, -50%) scale(0.9);
+  //   opacity: 0;
+  // }
 }
 .modal {
   position: absolute;
@@ -45,8 +48,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  transition: transform $animation, opacity $animation;
-
+ 
   @include for-desktop {
     max-width: 528px;
   }
