--- a/src/sass/layout.scss/_gallery.scss
+++ b/src/sass/layout.scss/_gallery.scss
@@ -42,6 +42,11 @@
   }
 }
 
+.gallery__item {
+  overflow: hidden;
+  border-radius: 22px;
+}
+
 .gallery__img {
   width: 100%;
   height: 100%;
@@ -55,6 +60,15 @@
   @include for-desktop {
     border-radius: 20px;
   }
+}
+
+.gallery__img {
+  transition: transform $animation;
+}
+
+.gallery__link:hover .gallery__img {
+  transform: scale(1.1);
+  overflow: hidden;
 }
 
 .gallery__item--1 {
