--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -36,6 +36,7 @@
             </li>
         </ul>
     </div>
+    <span onclick="topFunction()" id="top" class="btn btn-success btn-sm px-3 rounded">UP</span>
 </section>
 
    
