fixed hero circle

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <section class="hero">
-  <div class="hero__container">
+  <div class="container hero__container">
     <div class="hero__main-info">
       <h1 class="title hero__title">
         <span class="hero__title--white">ice cream made with</span> passion
