bug fix in gallery

--- a/src/sass/layout.scss/_gallery.scss
+++ b/src/sass/layout.scss/_gallery.scss
@@ -44,7 +44,15 @@
 
 .gallery__item {
   overflow: hidden;
-  border-radius: 22px;
+  border-radius: 7px;
+
+  @include for-tablet {
+    border-radius: 15px;
+  }
+
+  @include for-desktop {
+    border-radius: 20px;
+  }
 }
 
 .gallery__img {
