--- a/src/sass/layout.scss/_contacts.scss
+++ b/src/sass/layout.scss/_contacts.scss
@@ -25,15 +25,20 @@
 }
 
 .contacts__item {
-  position: relative;
-  top: -90px;
-  @include only-phone {
+    position: relative;
+    top: -90px;
+    padding: 43px 20px;
+    background-color: #fff;
+    box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+    border-radius: 24px;
+    margin-bottom: 20px;
+
+    @include for-phone {
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 20px;
     width: 220px;
     height: 427px;
-  }
+    }
 
   padding: 43px 20px;
 
