knopka super puper

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -36,8 +36,9 @@
             </li>
         </ul>
     </div>
-    <span onclick="topFunction()" id="top" class="btn btn-success btn-sm px-3 rounded">UP</span>
 </section>
+<button class="up">Наверх</button>
+
 
    
 
