--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,6 +8,18 @@
       <ul class="list footer__socials">
         <li class="footer__socials-item">
           <a
+            href="https://www.instagram.com/ice_cream_proj"
+            class="footer__socials-link"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg class="footer__socials-svg" width="20" height="20">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer__socials-item">
+          <a
             href="https://github.com"
             class="footer__socials-link"
             target="_blank"
