new js for mobile menu done

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,7 +23,7 @@
     <div class="main-nav__menu" id="main-nav__menu" data-menu>
       <button
         type="button"
-        class="main-nav__open-button"
+        class="main-nav__close-button"
         aria-controls="main-nav__menu"
         data-menu-button
       >
