--- a/src/sass/layout.scss/_header.scss
+++ b/src/sass/layout.scss/_header.scss
@@ -68,51 +68,36 @@
     display: none;
   }
 
-  &.is-open {
+  /*   &.is-open {
     @include for-tablet {
       right: 20px;
     }
-  }
-}
+  } */
 
-.main-nav__svg {
-  width: 21px;
-  height: 14px;
-
-  .main-nav__open-button.is-open & {
-    width: 17px;
-    height: 17px;
-  }
-}
-.main-nav__close {
-  stroke: $btn-light-color;
-
-  opacity: 0;
-  visibility: hidden;
-
-  transition: visibility $animation, opacity $animation, stroke $animation;
-
-  .main-nav__open-button.is-open & {
-    opacity: 1;
-    visibility: visible;
-  }
-}
-.main-nav__open {
   stroke: $accent-dark;
 
   transition: visibility $animation, opacity $animation, stroke $animation;
 
-  .main-nav__open-button.is-open & {
-    opacity: 0;
-    visibility: hidden;
+  .main-nav__menu.is-open & {
+    display: none;
   }
 }
+
+/* .main-nav__open-button {
+  stroke: $accent-dark;
+
+  transition: visibility $animation, opacity $animation, stroke $animation;
+
+  .main-nav__menu.is-open & {
+    display: none;
+  }
+} */
 .main-nav__menu {
   display: flex;
   padding: 60px 0;
 
   @include phone-and-tablet {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     width: 250px;
@@ -143,6 +128,60 @@
     justify-content: space-between;
     flex-grow: 1;
   }
+}
+
+.main-nav__close-button {
+  position: absolute;
+  top: 23px;
+  right: 34px;
+  z-index: 3;
+  display: block;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+
+  transition: right $animation;
+  /* stroke: #fff; */
+
+  /* @include for-tablet {
+    top: 30px;
+    right: 225px;
+  }*/
+
+  @include for-desktop {
+    display: none;
+  }
+
+  /*  &.is-open {
+    @include for-tablet {
+      right: 20px;
+    }
+  } */
+}
+
+/* .main-nav__svg {
+  width: 21px;
+  height: 14px;
+
+  .main-nav__open-button.is-open & {
+    width: 17px;
+    height: 17px;
+  }
+} */
+.main-nav__close {
+  stroke: $btn-light-color;
+
+  /* opacity: 0;
+  visibility: hidden; */
+
+  transition: visibility $animation, opacity $animation, stroke $animation;
+
+  /* .main-nav__open-button.is-open & {
+    opacity: 1;
+    visibility: visible;
+  } */
 }
 .site-nav {
   color: $white-text-color;
