--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -50,7 +50,7 @@
     <button
       type="button"
       class="button button--light main-nav__buy-button--right"
-      data-buy-modal-open
+      data-buy-modal-open-tablet
     >
       Buy now
       <svg class="button__icon button__icon--dark" width="10" height="10">
@@ -59,9 +59,14 @@
     </button>
   </div>
 </header>
-<div class="backdrop is-hidden" data-buy-modal>
+<div class="backdrop is-hidden" data-buy-modal data-buy-modal-tablet>
   <div class="modal">
     <button class="modal__close" data-buy-modal-close>
+      <svg width="20" height="20">
+        <use href="./images/icons.svg#menu-close"></use>
+      </svg>
+    </button>
+    <button class="modal__close" data-buy-modal-close-tablet>
       <svg width="20" height="20">
         <use href="./images/icons.svg#menu-close"></use>
       </svg>
